--- a/index.html
+++ b/index.html
@@ -1,17 +1,58 @@
-<!doctype html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>fatsopanda.com by fatsopanda</title>
+<!DOCTYPE html>
+<html lang="en">
+<head>
 
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/github-light.css">
-    <meta name="viewport" content="width=device-width">
-  </head>
-  <body>
+  <!-- Basic Page Needs
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <meta charset="utf-8">
+  <title>fatsopanda</title>
+  <meta name="description" content="">
+  <meta name="author" content="">
 
-     test 
+  <!-- Mobile Specific Metas
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  </body>
+  <!-- FONT
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <link href="//fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
+
+  <!-- CSS
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/skeleton.css">
+  <link rel="stylesheet" href="css/custom.css?v=12">
+
+  <!-- Favicon
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <link rel="icon" type="image/png" href="images/favicon.png">
+
+</head>
+<body>
+
+  <!-- Primary Page Layout
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <div class="container">
+      <div class="row" style="margin-top: 5%">
+        <div class="two columns">
+          <img class="fatsologo" src="images/fatsologo_150.png">
+        </div>
+        <div class="nine columns">
+            <p>Hi there! I love games, so I decided to start making them. I'm currently working my way into game development by doing game jams and creating various game prototypes. I'll keep this site updated with some of my works.<br><br>
+            You can find me in gamedev related meetups in Helsinki, and usually I'll make my way into bigger events around the world few times a year. I'm also active on <a href="https://twitter.com/fatsopanda">Twitter</a>.</p>
+        </div>
+    </div>
+    <div class="row" style="margin-top: 5%">
+        <div class="four columns">
+            <a href="https://fatsopanda.itch.io/morning-coffee-poop"><img class="pooplogo" src="images/morning_coffee_poop.png"></a>
+        </div>
+        <div class="two columns">
+            <img class="cupcakeslogo" src="images/cupcakes001.png">
+        </div>
+    </div>
+  </div>
+
+<!-- End Document
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+</body>
 </html>
