--- a/index.html
+++ b/index.html
@@ -43,11 +43,10 @@
         </div>
     </div>
     <div class="row" style="margin-top: 5%">
-        <div class="four columns">
-            <a href="https://fatsopanda.itch.io/morning-coffee-poop"><img class="pooplogo" src="images/morning_coffee_poop.png"></a>
-        </div>
-        <div class="two columns">
-            <img class="cupcakeslogo" src="images/cupcakes001.png">
+        <div class="nine columns">
+            Games:<br />
+            * <a href="https://fatsopanda.itch.io/morning-coffee-poop">Morning Coffee</a>
+            * <a href="https://fatsopanda.itch.io/shift-and-catch-em">Shift and Catch 'em</a>
         </div>
     </div>
   </div>
