--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
     </div>
     <div class="row" style="margin-top: 5%">
         <div class="nine columns">
-            Games:<br />
-            * <a href="https://fatsopanda.itch.io/morning-coffee-poop">Morning Coffee</a><br />
-            * <a href="https://fatsopanda.itch.io/shift-and-catch-em">Shift and Catch 'em</a>
+            <h3>Games</h3><br />
+            <a href="https://fatsopanda.itch.io/morning-coffee-poop">Morning Coffee</a><br />
+            <a href="https://fatsopanda.itch.io/shift-and-catch-em">Shift and Catch 'em</a>
         </div>
     </div>
   </div>
