--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     </div>
     <div class="row" style="margin-top: 5%">
         <div class="nine columns">
-            <h3>Games</h3><br />
+            <h4>Games</h4>
             <a href="https://fatsopanda.itch.io/morning-coffee-poop">Morning Coffee</a><br />
             <a href="https://fatsopanda.itch.io/shift-and-catch-em">Shift and Catch 'em</a>
         </div>
