--- a/index.html
+++ b/index.html
@@ -45,8 +45,13 @@
     <div class="row" style="margin-top: 5%">
         <div class="nine columns">
             <h4>Games</h4>
-            <a href="https://fatsopanda.itch.io/morning-coffee-poop">Morning Coffee</a><br />
-            <a href="https://fatsopanda.itch.io/shift-and-catch-em">Shift and Catch 'em</a>
+            Under development: cupcakes on a boat<br />
+            <a href="https://fatsopanda.itch.io/shift-and-catch-em">Shift and Catch 'em</a><br />
+            <a href="https://fatsopanda.itch.io/morning-coffee-poop">Morning Coffee</a>
+
+            <h5>Shaders</h5>
+            <a href="https://www.shadertoy.com/view/4sySRD">Plasma 1</a><br />
+                <a href="https://www.shadertoy.com/view/lsySzW">Plasma 2</a>
         </div>
     </div>
   </div>
