--- a/index.html
+++ b/index.html
@@ -44,14 +44,14 @@
     </div>
     <div class="row" style="margin-top: 5%">
         <div class="nine columns">
-            <h4>Games</h4>
+            <h5>Games</h5>
             Under development: cupcakes on a boat<br />
             <a href="https://fatsopanda.itch.io/shift-and-catch-em">Shift and Catch 'em</a><br />
-            <a href="https://fatsopanda.itch.io/morning-coffee-poop">Morning Coffee</a>
+            <a href="https://fatsopanda.itch.io/morning-coffee-poop">Morning Coffee</a><br />
 
             <h5>Shaders</h5>
             <a href="https://www.shadertoy.com/view/4sySRD">Plasma 1</a><br />
-                <a href="https://www.shadertoy.com/view/lsySzW">Plasma 2</a>
+            <a href="https://www.shadertoy.com/view/lsySzW">Plasma 2</a>
         </div>
     </div>
   </div>
