More content changes

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
           <img class="fatsologo" src="images/fatsologo_150.png">
         </div>
         <div class="nine columns">
-            <p>Hi there! I love games, so I decided to start making them. I'm currently working my way into game development by doing game jams and creating various game prototypes. I'll keep this site updated with some of my works.<br><br>
-            You can find me in gamedev related meetups in Helsinki, and usually I'll make my way into bigger events around the world few times a year. I'm also active on <a href="https://twitter.com/fatsopanda">Twitter</a>.</p>
+            <p>Hi there! I make games and shaders; you can find some of them in here.<br />
+            I'm also active on <a href="https://twitter.com/fatsopanda">Twitter</a>.</p>
         </div>
     </div>
     <div class="row" style="margin-top: 5%">
