and more formatting

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <div class="nine columns">
             <p>Hi there! I make games and shaders; you can find some of them in here.<br />< br/>
             <a href="https://github.com/fatsopanda">github</a><br />
-            <a href="https://fatsopanda.itch.io>"itch.io</a><br />
+            <a href="https://fatsopanda.itch.io">itch.io</a><br />
             <a href="https://twitter.com/fatsopanda">Twitter</a></p>
         </div>
     </div>
@@ -49,7 +49,7 @@
             <h5>Games</h5>
             Under development: cupcakes on a boat<br />
             <a href="https://fatsopanda.itch.io/shift-and-catch-em">Shift and Catch 'em</a><br />
-            <a href="https://fatsopanda.itch.io/morning-coffee-poop">Morning Coffee</a><br />
+            <a href="https://fatsopanda.itch.io/morning-coffee-poop">Morning Coffee</a><br /><br />
 
             <h5>Shaders</h5>
             <a href="https://www.shadertoy.com/view/4sySRD">Plasma 1</a><br />
