--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           <img class="fatsologo" src="images/fatsologo_150.png">
         </div>
         <div class="nine columns">
-            <p>Hi there! I make games and shaders; you can find some of them in here.<br />< br/>
+            <p>Hi there! I make games and shaders;<br />you can find some of them in here.<br /><br />
             <a href="https://github.com/fatsopanda">github</a><br />
             <a href="https://fatsopanda.itch.io">itch.io</a><br />
             <a href="https://twitter.com/fatsopanda">Twitter</a></p>
