--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <div class="container">
       <div class="row" style="margin-top: 5%">
-        <div class="two columns">
+        <div class="nine columns">
           <img class="fatsologo" src="images/fatsologo_150.png">
         </div>
         <div class="nine columns">
