--- a/index.html
+++ b/index.html
@@ -35,10 +35,8 @@
   <div class="container">
       <div class="row" style="margin-top: 5%">
         <div class="nine columns">
-            <p>Hi there! I make games and shaders;<br />you can find some of them in here.<br /><br />
-            <a href="https://github.com/fatsopanda">github</a><br />
-            <a href="https://fatsopanda.itch.io">itch.io</a><br />
-            <a href="https://twitter.com/fatsopanda">Twitter</a></p>
+            <p>Hi there! I make games and shaders; you can find some of them in here.<br /
+            You can follow my progress on <a href="https://twitter.com/fatsopanda">Twitter</a>
         </div>
     </div>
     <div class="row" style="margin-top: 5%">
