--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <div class="container">
       <div class="row" style="margin-top: 5%">
         <div class="nine columns">
-            <p>Hi there! I make games and shaders; you can find some of them in here.<br /
+            <p>Hi there! I make games and shaders; you can find some of them in here.<br />
             You can follow my progress on <a href="https://twitter.com/fatsopanda">Twitter</a>
         </div>
     </div>
