Updated shader repo link

--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
             <a href="https://fatsopanda.itch.io/morning-coffee-poop">Morning Coffee</a><br /><br />
 
             <h5>Shaders</h5>
-            <a href="https://www.shadertoy.com/view/4sySRD">Plasma 1</a><br />
-            <a href="https://www.shadertoy.com/view/lsySzW">Plasma 2</a>
+            I'm currently in the process of learning more about shaders and graphics programming.<br />
+            You can find some of them in a <a href="https://github.com/fatsopanda/shaders_pub">GitHub repo</a> I've setup. This is mainly stuff I'm comfortable with sharing and not the most wackiest things.
         </div>
     </div>
   </div>
