--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <div class="row" style="margin-top: 5%">
         <div class="nine columns">
             <h5>Games</h5>
-            Under development: cupcakes on a boat<br />
+            <a href="https://fatsopanda.itch.io/cupcake-boating">Cupcake boating</a> (canceled project)<br />
             <a href="https://fatsopanda.itch.io/shift-and-catch-em">Shift and Catch 'em</a><br />
             <a href="https://fatsopanda.itch.io/morning-coffee-poop">Morning Coffee</a><br /><br />
 
