--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <div class="container">
       <div class="row" style="margin-top: 5%">
         <div class="nine columns">
-            <p>Hi there! I make games and shaders; you can find some of them in here.<br />
+            <p>Hi there! I make games and some occasional graphics programming; you can find some of that in here.<br />
             You can follow my progress on <a href="https://twitter.com/fatsopanda">Twitter</a>
         </div>
     </div>
@@ -46,9 +46,9 @@
             <a href="https://fatsopanda.itch.io/shift-and-catch-em">Shift and Catch 'em</a><br />
             <a href="https://fatsopanda.itch.io/morning-coffee-poop">Morning Coffee</a><br /><br />
 
-            <h5>Shaders</h5>
-            I'm currently in the process of learning more about shaders and graphics programming.<br />
-            You can find some of them in a <a href="https://github.com/fatsopanda/shaders_pub">GitHub repo</a> I've setup. This is mainly stuff I'm comfortable with sharing and not the most wackiest things.
+            <h5>Graphics programming</h5>
+            I'm currently in the process of learning more about graphics programming and shaders.<br />
+            You can find some of them in a <a href="https://github.com/fatsopanda/shaders_pub">GitHub repo</a> I've setup. This is mainly stuff I'm comfortable with sharing and not the most wackiest things. More to follow very soon!
         </div>
     </div>
   </div>
