--- a/index.html
+++ b/index.html
@@ -47,8 +47,12 @@
             <a href="https://fatsopanda.itch.io/morning-coffee-poop">Morning Coffee</a><br /><br />
 
             <h5>Graphics programming</h5>
-            I'm currently in the process of learning more about graphics programming and shaders.<br />
-            You can find some of them in a <a href="https://github.com/fatsopanda/shaders_pub">GitHub repo</a> I've setup. This is mainly stuff I'm comfortable with sharing and not the most wackiest things. More to follow very soon!
+	    I've been into demo scene since the early 2000.<br />
+	    Lately I started also to get more into graphics programming, starting first from Unity3D's shaders.<br />
+	    I'm now working on 2 different graphics demos while having my aim to get stronger with OpenGL, GLSL and C++.<br />
+	    One demo is focusing more on the engine side and the other one focuses in pixel shaders and raymarching.<br /><br />
+
+	    I'm hoping to publish them quite soon. Meanwhile you can check my template engine for running pixel shaders on OpenGL with SDL2: <a href="https://github.com/fatsopanda/template_opengl_shaders">OpenGL pixel shader template</a>
         </div>
     </div>
   </div>
