--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
             <a href="https://fatsopanda.itch.io/morning-coffee-poop">Morning Coffee</a><br /><br />
 
             <h5>Graphics programming</h5>
-	    I've been into demo scene since the early 2000.<br />
+	    My first demo party was Assembly '99. I've been into demo scene ever since.<br /><br />
 	    Lately I started also to get more into graphics programming, starting first from Unity3D's shaders.<br />
-	    I'm now working on 2 different graphics demos while having my aim to get stronger with OpenGL, GLSL and C++.<br />
+	    I'm now working on 2 different graphics demos while having my aim to get stronger with OpenGL, GLSL and C++.
 	    One demo is focusing more on the engine side and the other one focuses in pixel shaders and raymarching.<br /><br />
 
 	    I'm hoping to publish them quite soon. Meanwhile you can check my template engine for running pixel shaders on OpenGL with SDL2: <a href="https://github.com/fatsopanda/template_opengl_shaders">OpenGL pixel shader template</a>
