--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <div class="row" style="margin-top: 5%">
         <div class="nine columns">
             <h5>Games</h5>
-            <a href="https://fatsopanda.itch.io/cupcake-boating">Cupcake boating</a> (canceled project)<br />
+            <a href="https://fatsopanda.itch.io/cupcake-boating">Cupcake boating</a><br />
             <a href="https://fatsopanda.itch.io/shift-and-catch-em">Shift and Catch 'em</a><br />
             <a href="https://fatsopanda.itch.io/morning-coffee-poop">Morning Coffee</a><br /><br />
 
@@ -52,7 +52,7 @@
 	    I'm now working on 2 different graphics demos while having my aim to get stronger with OpenGL, GLSL and C++.
 	    One demo is focusing more on the engine side and the other one focuses in pixel shaders and raymarching.<br /><br />
 
-	    I'm hoping to publish them quite soon. Meanwhile you can check my template engine for running pixel shaders on OpenGL with SDL2: <a href="https://github.com/fatsopanda/template_opengl_shaders">OpenGL pixel shader template</a>
+        I'm hoping to publish them quite soon. You can find some of the pixel shaders I've written from here: <a href="https://github.com/fatsopanda/pixel_shaders">pixel shaders</a>
         </div>
     </div>
   </div>
