--- a/index.html
+++ b/index.html
@@ -42,17 +42,19 @@
     <div class="row" style="margin-top: 5%">
         <div class="nine columns">
             <h5>Games</h5>
+            <a href="https://fatsopanda.itch.io/make-coffee-the-hard-way">Make Coffee the Hard Way</a><br />
             <a href="https://fatsopanda.itch.io/cupcake-boating">Cupcake boating</a><br />
             <a href="https://fatsopanda.itch.io/shift-and-catch-em">Shift and Catch 'em</a><br />
             <a href="https://fatsopanda.itch.io/morning-coffee-poop">Morning Coffee</a><br /><br />
 
             <h5>Graphics programming</h5>
-	    My first demo party was Assembly '99. I've been into demo scene ever since.<br /><br />
-	    Lately I started also to get more into graphics programming, starting first from Unity3D's shaders.<br />
-	    I'm now working on 2 different graphics demos while having my aim to get stronger with OpenGL, GLSL and C++.
-	    One demo is focusing more on the engine side and the other one focuses in pixel shaders and raymarching.<br /><br />
+            I started to get more into graphics programming during the spring 2016.<br />
+            Firstly I began to experiment with shaders in Unity3D and soon learned that there's a whole another world within the possibilities you can create with shaders.<br />
+            My thirst for more knowledged drove me to teach myself to code OpenGL and C++. In the learning process I started to enjoy coding more and more with C++ so I decided to start building my own rendering engine.<br /><br />
 
-        I'm hoping to publish them quite soon. You can find some of the pixel shaders I've written from here: <a href="https://github.com/fatsopanda/pixel_shaders">pixel shaders</a>
+            It's still currently work in progress, but I'm hoping to have it finished this fall. Currently it does deferred shading with shadow mapping and some post-processing (HDR, Bloom, SSAO). I'd like to add cascaded shadow maps into it and possibly collision detection so that I can create a small playable game with it.<br /><br />
+
+        Meanwhile I'm working on this, you can find some of the pixel shaders I've written from here (yes, they're quite basic still): <a href="https://github.com/fatsopanda/pixel_shaders">pixel shaders</a>
         </div>
     </div>
   </div>
