--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
     <div class="row" style="margin-top: 5%">
         <div class="nine columns">
             <h5>Games</h5>
+            <a href="https://fatsopanda.itch.io/tap-good">Tap Good</a><br />
             <a href="https://fatsopanda.itch.io/make-coffee-the-hard-way">Make Coffee the Hard Way</a><br />
             <a href="https://fatsopanda.itch.io/cupcake-boating">Cupcake boating</a><br />
             <a href="https://fatsopanda.itch.io/shift-and-catch-em">Shift and Catch 'em</a><br />
