--- a/index.html
+++ b/index.html
@@ -44,8 +44,9 @@
             <h5>Games</h5>
             <a href="https://fatsopanda.itch.io/tap-good">Tap Good</a><br />
             <a href="https://fatsopanda.itch.io/make-coffee-the-hard-way">Make Coffee the Hard Way</a><br />
-            <a href="https://fatsopanda.itch.io/cupcake-boating">Cupcake boating</a><br /><img src="images/ldjam35.gif" /><br />
-            <a href="https://fatsopanda.itch.io/shift-and-catch-em">Shift and Catch 'em</a><br />
+            <a href="https://fatsopanda.itch.io/cupcake-boating">Cupcake boating</a><br /><br />
+            <a href="https://fatsopanda.itch.io/shift-and-catch-em">Shift and Catch 'em</a><br /><img src="images/ldjam35.gif" /><br />
+
             <a href="https://fatsopanda.itch.io/morning-coffee-poop">Morning Coffee</a><br /><br />
 
             <h5>Graphics programming</h5>
