--- a/index.html
+++ b/index.html
@@ -43,11 +43,10 @@
         <div class="nine columns">
             <h5>Games</h5>
             <a href="https://fatsopanda.itch.io/tap-good">Tap Good</a><br /><br />
+            <a href="https://fatsopanda.itch.io/shift-and-catch-em">Shift and Catch 'em</a><br /><a href="https://fatsopanda.itch.io/shift-and-catch-em"><img src="images/ldjam35.gif" /></a><br />
             <a href="https://fatsopanda.itch.io/make-coffee-the-hard-way">Make Coffee the Hard Way</a><br /><img src="images/ldjam36.gif"><br /><br />
-            <a href="https://fatsopanda.itch.io/cupcake-boating">Cupcake boating</a><br /><img src="images/cupcakes.gif" /> <br /><br />
-            <a href="https://fatsopanda.itch.io/shift-and-catch-em">Shift and Catch 'em</a><br /><img src="images/ldjam35.gif" /><br />
-
-            <a href="https://fatsopanda.itch.io/morning-coffee-poop">Morning Coffee</a><br /><br />
+            <a href="https://fatsopanda.itch.io/cupcake-boating">Cupcake boating</a><br /><a href="https://fatsopanda.itch.io/cupcake-boating"><img src="images/cupcakes.gif" /></a><br /><br />
+            <a href="https://fatsopanda.itch.io/morning-coffee-poop">Morning Coffee</a><br /><a href="https://fatsopanda.itch.io/morning-coffee-poop"><img src="images/ggj.gif" /></a><br /><br />
 
             <h5>Graphics programming</h5>
             I started to get more into graphics programming during the spring 2016.<br />
