--- a/index.html
+++ b/index.html
@@ -49,13 +49,7 @@
             <a href="https://fatsopanda.itch.io/morning-coffee-poop">Morning Coffee</a><br /><a href="https://fatsopanda.itch.io/morning-coffee-poop"><img src="images/ggj.gif" /></a><br /><br />
 
             <h5>Graphics programming</h5>
-            I started to get more into graphics programming during the spring 2016.<br />
-            Firstly I began to experiment with shaders in Unity3D and soon learned that there's a whole another world within the possibilities you can create with shaders.<br /><br />
-            My thirst for more knowledged drove me to teach myself to code OpenGL and C++. In the learning process I started to enjoy coding more and more with C++ so I decided to start building my own rendering engine.<br /><br />
-
-            It's still currently work in progress, but I'm hoping to have it finished this fall. Currently it does deferred shading with shadow mapping and some post-processing (HDR, Bloom, SSAO). I'd like to add cascaded shadow maps into it and possibly collision detection so that I can create a small playable game with it.<br /><br />
-
-        Meanwhile I'm working on this, you can find some of the pixel shaders I've written from here (yes, they're quite basic still): <a href="https://github.com/fatsopanda/pixel_shaders">pixel shaders</a>
+            <a href="https://github.com/fatsopanda/pixel_shaders">Pixel Shaders</a><br /><img src="images/cubemarch.png" /><img src="images/plasma1.png"><img src="images/plasma2.png"><br /><br />
         </div>
     </div>
   </div>
