--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
             <a href="https://fatsopanda.itch.io/morning-coffee-poop">Morning Coffee</a><br /><a href="https://fatsopanda.itch.io/morning-coffee-poop"><img src="images/ggj.gif" /></a><br /><br />
 
             <h5>Graphics programming</h5>
+            <p>Rendering engine<br />
+            This one is still under development. Here's some work in progress screenshots:<br /></p>
+
             <a href="https://github.com/fatsopanda/pixel_shaders">Pixel Shaders</a><br /><img src="images/cubemarch.png" /><img src="images/plasma1.png"><img src="images/plasma2.png"><br /><br />
         </div>
     </div>
