--- a/index.html
+++ b/index.html
@@ -41,18 +41,24 @@
     </div>
     <div class="row" style="margin-top: 5%">
         <div class="nine columns">
+            <h5>Graphics programming</h5>
+            <p>Rendering engine<br />
+            I'm currently developing my own rendering engine with OpenGL and C++. It's using deferred shading and some of the most common post processing effects like Bloom, HDR and SSAO. Since the engine isn't ready just yet, it's not up on github. I have posted a few work in progress videos of it here:<br />
+            <a href="http://nema.fi/demo_videos/demo1.mp4">First iteration</a><br />
+            <a href="http://nema.fi/demo_videos/demo2.mp4">Smaller light boxes</a><br /><br />
+            Things currently left to do:<br />
+            - Optimizing volumetric lights<br />
+            - Better tone mapping<br />
+            - Better lighting in the scene and cascaded shadow maps<br />
+            - Collision detection
+
+            <a href="https://github.com/fatsopanda/pixel_shaders">Pixel Shaders</a><br />Some pixel shaders / ray marchers I wrote earlier this year. More to come :)<br /><br /><img src="images/cubemarch.png" /><img src="images/plasma1.png"><img src="images/plasma2.png"><br /><br />
             <h5>Games</h5>
             <a href="https://fatsopanda.itch.io/tap-good">Tap Good</a><br /><a href="https://fatsopanda.itch.io/tap-good"><img src="images/tapgood.gif" /></a><br />
             <a href="https://fatsopanda.itch.io/shift-and-catch-em">Shift and Catch 'em</a><br /><a href="https://fatsopanda.itch.io/shift-and-catch-em"><img src="images/ldjam35.gif" /></a><br />
             <a href="https://fatsopanda.itch.io/make-coffee-the-hard-way">Make Coffee the Hard Way</a><br /><a href="https://fatsopanda.itch.io/make-coffee-the-hard-way"><img src="images/ldjam36.gif"></a><br /><br />
             <a href="https://fatsopanda.itch.io/cupcake-boating">Cupcake boating</a><br /><a href="https://fatsopanda.itch.io/cupcake-boating"><img src="images/cupcakes.gif" /></a><br /><br />
             <a href="https://fatsopanda.itch.io/morning-coffee-poop">Morning Coffee</a><br /><a href="https://fatsopanda.itch.io/morning-coffee-poop"><img src="images/ggj.gif" /></a><br /><br />
-
-            <h5>Graphics programming</h5>
-            <p>Rendering engine<br />
-            This one is still under development. Here's some work in progress screenshots:<br /></p>
-
-            <a href="https://github.com/fatsopanda/pixel_shaders">Pixel Shaders</a><br /><img src="images/cubemarch.png" /><img src="images/plasma1.png"><img src="images/plasma2.png"><br /><br />
         </div>
     </div>
   </div>
