few small changes

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <div class="row" style="margin-top: 5%">
         <div class="nine columns">
             <h5>Graphics programming</h5>
-            <p>Rendering engine<br />
+            <p><b>Rendering engine</b><br />
             I'm currently developing my own rendering engine with OpenGL and C++. It's using deferred shading and some of the most common post processing effects like Bloom, HDR and SSAO. Since the engine isn't ready just yet, it's not up on github. I have posted a few work in progress videos of it here:<br />
             <a href="http://nema.fi/demo_videos/demo1.mp4">First iteration</a><br />
             <a href="http://nema.fi/demo_videos/demo2.mp4">Smaller light boxes</a><br /><br />
@@ -50,7 +50,7 @@
             - Optimizing volumetric lights<br />
             - Better tone mapping<br />
             - Better lighting in the scene and cascaded shadow maps<br />
-            - Collision detection
+            - Collision detection<br /><br />
 
             <a href="https://github.com/fatsopanda/pixel_shaders">Pixel Shaders</a><br />Some pixel shaders / ray marchers I wrote earlier this year. More to come :)<br /><br /><img src="images/cubemarch.png" /><img src="images/plasma1.png"><img src="images/plasma2.png"><br /><br />
             <h5>Games</h5>
