--- a/index.html
+++ b/index.html
@@ -47,10 +47,11 @@
             <a href="http://nema.fi/demo_videos/demo1.mp4">First iteration</a><br />
             <a href="http://nema.fi/demo_videos/demo2.mp4">Smaller light boxes</a><br /><br />
             Things currently left to do:<br />
-            - Optimizing volumetric lights<br />
+            - Optimizing light volumes<br />
             - Better tone mapping<br />
             - Better lighting in the scene and cascaded shadow maps<br />
-            - Collision detection<br /><br />
+            - Collision detection<br />
+            - Anything that comes in mind in the development process<br /><br />
 
             <a href="https://github.com/fatsopanda/pixel_shaders">Pixel Shaders</a><br />Some pixel shaders / ray marchers I wrote earlier this year. More to come :)<br /><br /><img src="images/cubemarch.png" /><img src="images/plasma1.png"><img src="images/plasma2.png"><br /><br />
             <h5>Games</h5>
