Added demo screenshot

--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
         <div class="nine columns">
             <h5>Graphics programming</h5>
             <p><b>Rendering engine</b><br />
-            I'm currently developing my own rendering engine with OpenGL and C++. It's using deferred shading and some of the most common post processing effects like Bloom, HDR and SSAO. The engine's public repository is available now on <a href="https://github.com/fatsopanda/opengl_demo_public">github</a> 
+            I'm currently developing my own rendering engine with OpenGL and C++. It's using deferred shading and some of the most common post processing effects like Bloom, HDR and SSAO. The engine's public repository is available now on <a href="https://github.com/fatsopanda/opengl_demo_public">github</a><br />
+            <a href="images/demo_1024.png"><img src="images/demo_640.png"></a><br /><br />
 
             <a href="https://github.com/fatsopanda/pixel_shaders">Pixel Shaders</a><br />Some pixel shaders / ray marchers I wrote earlier this year. More to come :)<br /><br /><img src="images/cubemarch.png" /><img src="images/plasma1.png"><img src="images/plasma2.png"><br /><br />
             <h5>Games</h5>
