--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
       <div class="row" style="margin-top: 5%">
         <div class="nine columns">
             <p>Hi there! I make games and do graphics programming; you can find some of that in here.<br />
-            You can follow my progress on <a href="https://twitter.com/fatsopanda">Twitter</a>
+            You can follow my progress on <a href="https://twitter.com/fatsopanda">Twitter</a><br />
+            Plentiful of things are also available on my <a href="https://github.com/fatsopanda">GitHub</a>
         </div>
     </div>
     <div class="row" style="margin-top: 5%">
@@ -47,11 +48,18 @@
             <a href="images/demo_1024.png"><img src="images/demo_640.png"></a><br /><br />
 
             <a href="https://github.com/fatsopanda/pixel_shaders">Pixel Shaders</a><br />Some pixel shaders / ray marchers I wrote earlier this year. More to come :)<br /><br /><img src="images/cubemarch.png" /><img src="images/plasma1.png"><img src="images/plasma2.png"><br /><br />
+
             <h5>Games</h5>
+            <a href="http://globalgamejam.org/2017/games/crowd-surf-brawl">Crowd Surf Brawl</a><br /><a href="http://globalgamejam.org/2017/games/crowd-surf-brawl"><img src="images/crowd.gif" /></a><br />
+
             <a href="https://fatsopanda.itch.io/tap-good">Tap Good</a><br /><a href="https://fatsopanda.itch.io/tap-good"><img src="images/tapgood.gif" /></a><br />
+
             <a href="https://fatsopanda.itch.io/shift-and-catch-em">Shift and Catch 'em</a><br /><a href="https://fatsopanda.itch.io/shift-and-catch-em"><img src="images/ldjam35.gif" /></a><br />
+
             <a href="https://fatsopanda.itch.io/make-coffee-the-hard-way">Make Coffee the Hard Way</a><br /><a href="https://fatsopanda.itch.io/make-coffee-the-hard-way"><img src="images/ldjam36.gif"></a><br /><br />
+
             <a href="https://fatsopanda.itch.io/cupcake-boating">Cupcake boating</a><br /><a href="https://fatsopanda.itch.io/cupcake-boating"><img src="images/cupcakes.gif" /></a><br /><br />
+
             <a href="https://fatsopanda.itch.io/morning-coffee-poop">Morning Coffee</a><br /><a href="https://fatsopanda.itch.io/morning-coffee-poop"><img src="images/ggj.gif" /></a><br /><br />
         </div>
     </div>
