--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             I'm currently developing my own rendering engine with OpenGL and C++. It's using deferred shading and some of the most common post processing effects like Bloom, HDR and SSAO. The engine's public repository is available now on <a href="https://github.com/fatsopanda/opengl_demo_public">github</a><br />
             <a href="images/demo_1024.png"><img src="images/demo_640.png"></a><br /><br />
 
-            <b>Pixel Shaders</b><br />Some pixel shaders and raymarchers I wrote. More to come this year :) Find these also on <a href="https://github.com/fatsopanda/pixel_shaders">GitHub</a><br /><img src="images/cubemarch.png" /><img src="images/plasma1.png"><img src="images/plasma2.png"><br /><br />
+            <b>Pixel Shaders</b><br />Some pixel shaders and raymarchers I wrote. More to come this year :)<br />Find these also on <a href="https://github.com/fatsopanda/pixel_shaders">GitHub</a><br /><img src="images/cubemarch.png" /><img src="images/plasma1.png"><img src="images/plasma2.png"><br /><br />
 
             <h5>Games</h5>
             <a href="http://globalgamejam.org/2017/games/crowd-surf-brawl">Crowd Surf Brawl</a><br /><a href="http://globalgamejam.org/2017/games/crowd-surf-brawl"><img src="images/crowd.gif" /></a><br />
