--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <b>Pixel Shaders</b><br />Some pixel shaders and raymarchers I wrote. More to come this year :)<br />Find these also on <a href="https://github.com/fatsopanda/pixel_shaders">GitHub</a><br /><img src="images/cubemarch.png" /><img src="images/plasma1.png"><img src="images/plasma2.png"><br /><br />
 
             <h5>Games</h5>
-            <a href="http://globalgamejam.org/2017/games/crowd-surf-brawl">Crowd Surf Brawl</a><br /><a href="http://globalgamejam.org/2017/games/crowd-surf-brawl"><img src="images/crowd.gif" /></a><br />
+            <a href="http://globalgamejam.org/2017/games/crowd-surf-brawl">Crowd Surf Brawl</a><br /><a href="http://globalgamejam.org/2017/games/crowd-surf-brawl"><img src="images/crowdsurf.png" /></a><br />
 
             <a href="https://fatsopanda.itch.io/tap-good">Tap Good</a><br /><a href="https://fatsopanda.itch.io/tap-good"><img src="images/tapgood.gif" /></a><br />
 
