--- a/index.html
+++ b/index.html
@@ -35,9 +35,10 @@
   <div class="container">
       <div class="row" style="margin-top: 5%">
         <div class="nine columns">
-            <p>Hi there! I make games and do graphics programming; you can find some of that in here.<br />
-            You can follow my progress on <a href="https://twitter.com/fatsopanda">Twitter</a><br />
-            Plentiful of things are also available on my <a href="https://github.com/fatsopanda">GitHub</a>
+            <p>Hi there! I'm an aspiring software developer focusing into graphics programming and game development.<br />
+            You can find most of my works from here<br />
+            Please follow me on <a href="https://twitter.com/fatsopanda">Twitter</a><br />
+            Plentiful of projects are also available on my <a href="https://github.com/fatsopanda">GitHub</a>
         </div>
     </div>
     <div class="row" style="margin-top: 5%">
@@ -47,7 +48,9 @@
             I'm currently developing my own rendering engine with OpenGL and C++. It's using deferred shading and some of the most common post processing effects like Bloom, HDR and SSAO. The engine's public repository is available now on <a href="https://github.com/fatsopanda/opengl_demo_public">github</a><br />
             <a href="images/demo_1024.png"><img src="images/demo_640.png"></a><br /><br />
 
-            <b>Pixel Shaders</b><br />Some pixel shaders and raymarchers I wrote. More to come this year :)<br />Find these also on <a href="https://github.com/fatsopanda/pixel_shaders">GitHub</a><br /><img src="images/cubemarch.png" /><img src="images/plasma1.png"><img src="images/plasma2.png"><br /><br />
+            <b>Pixel Shaders</b><br />Some pixel shaders and raymarchers I wrote. More to come this year :)<br />Find these also on <a href="https://github.com/fatsopanda/pixel_shaders">GitHub</a><br /><img src="images/cubemarch.png" />
+            I really, really, like plasma<br />
+            <img src="images/plasma1.png"><img src="images/plasma2.png"><img src="images/plasma3.png"><br /><br />
 
             <h5>Games</h5>
             <a href="http://globalgamejam.org/2017/games/crowd-surf-brawl">Crowd Surf Brawl</a><br /><a href="http://globalgamejam.org/2017/games/crowd-surf-brawl"><img src="images/crowdsurf.png" /></a><br />
