--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
   <div class="container">
       <div class="row" style="margin-top: 5%">
         <div class="nine columns">
-            <p>Hi there! I'm an aspiring software developer focusing into graphics programming and game development.<br />
-            You can find most of my works from here<br />
+            <p>Hi there! I code games, graphics and other interactive software.<br />
+            You can find most of my works from here :)<br />
             Please follow me on <a href="https://twitter.com/fatsopanda">Twitter</a><br />
             Plentiful of projects are also available on my <a href="https://github.com/fatsopanda">GitHub</a>
         </div>
