--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@
             <img src="images/plasma1.png"><img src="images/plasma2.png"><img src="images/plasma3.png"><br /><br />
 
             <h5>Games</h5>
+            <a href="https://zhamul.itch.io/sweet-end">Sweet End<a><br /><a href="https://zhamul.itch.io/sweet-end"><img src="images/sweet_end.png" /></a><br />
+              
             <a href="http://globalgamejam.org/2017/games/crowd-surf-brawl">Crowd Surf Brawl</a><br /><a href="http://globalgamejam.org/2017/games/crowd-surf-brawl"><img src="images/crowdsurf.png" /></a><br />
 
             <a href="https://fatsopanda.itch.io/tap-good">Tap Good</a><br /><a href="https://fatsopanda.itch.io/tap-good"><img src="images/tapgood.gif" /></a><br />
