Update the intro

--- a/index.html
+++ b/index.html
@@ -48,6 +48,10 @@
             I'm currently developing my own rendering engine with OpenGL and C++. It's using deferred shading and some of the most common post processing effects like Bloom, HDR and SSAO. The engine's public repository is available now on <a href="https://github.com/fatsopanda/opengl_demo_public">github</a><br />
             <a href="images/demo_1024.png"><img src="images/demo_640.png"></a><br /><br />
 
+            <p><b>Plasma Lamp's Dance of Freedom</b><br />
+            My very first 4k intro done for Assembly 17, placed as 12th. Final file size was 3910 bytes. I ran out of time in the end and managed to make a quick track on the last night before submitting the entry. This entry is available on <a href="http://www.pouet.net/prod.php?which=71447">Pouet.net</a><br />
+            <img src="images/plasmalamp.png">
+
             <b>Pixel Shaders</b><br />Some pixel shaders and raymarchers I wrote. More to come this year :)<br />Find these also on <a href="https://github.com/fatsopanda/pixel_shaders">GitHub</a><br /><img src="images/cubemarch.png" /><br />
             I really, really, like plasma<br />
             <img src="images/plasma1.png"><img src="images/plasma2.png"><img src="images/plasma3.png"><br /><br />
