--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <a href="images/demo_1024.png"><img src="images/demo_640.png"></a><br /><br />
 
             <p><b>Plasma Lamp's Dance of Freedom</b><br />
-            My very first 4k intro done for Assembly 17, placed as 12th. Final file size was 3910 bytes. I ran out of time in the end and managed to make a quick track on the last night before submitting the entry. This entry is available on <a href="http://www.pouet.net/prod.php?which=71447">Pouet.net</a><br />
+            My very first 4k intro done for Assembly 17, placed as 12th. Final file size was 3910 bytes. I ran out of time in the end and managed to make a quick track on the last night before submitting the entry. You can watch the entry  <a href="https://www.youtube.com/watch?v=k8g2xCfqZgY">here</a><br />
             <img src="images/plasmalamp.png"><br /><br />
 
             <b>Pixel Shaders</b><br />Some pixel shaders and raymarchers I wrote. More to come this year :)<br />Find these also on <a href="https://github.com/fatsopanda/pixel_shaders">GitHub</a><br /><img src="images/cubemarch.png" /><br />
