--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             My very first 4k intro done for Assembly 17, placed as 12th. Final file size was 3910 bytes. I ran out of time in the end and managed to make a quick track on the last night before submitting the entry. You can watch the entry  <a href="https://www.youtube.com/watch?v=k8g2xCfqZgY">here</a><br />
             <img src="images/plasmalamp.png"><br /><br />
 
-            <b>Pixel Shaders</b><br />Some pixel shaders and raymarchers I wrote. More to come this year :)<br />Find these also on <a href="https://github.com/fatsopanda/pixel_shaders">GitHub</a><br /><img src="images/cubemarch.png" /><br />
+            <b>Pixel Shaders</b><br />Some pixel shaders and raymarchers I've written.<br />Find these also on <a href="https://github.com/fatsopanda/shader_sketcher">GitHub</a><br /><img src="images/cubemarch.png" /><br />
             I really, really, like plasma<br />
             <img src="images/plasma1.png"><img src="images/plasma2.png"><img src="images/plasma3.png"><br /><br />
 
