--- a/index.html
+++ b/index.html
@@ -35,26 +35,23 @@
   <div class="container">
       <div class="row" style="margin-top: 5%">
         <div class="nine columns">
-            <p>Hi there! I code games, graphics and other interactive software.<br />
-            You can find most of my works from here :)<br />
+            <p>Hi there! I code graphics, games and other interactive software.<br />
             Please follow me on <a href="https://twitter.com/fatsopanda">Twitter</a><br />
-            Plentiful of projects are also available on my <a href="https://github.com/fatsopanda">GitHub</a>
+            Some projects are also available on my <a href="https://github.com/fatsopanda">GitHub</a>
         </div>
     </div>
     <div class="row" style="margin-top: 5%">
         <div class="nine columns">
             <h5>Graphics programming</h5>
             <p><b>Rendering engine</b><br />
-            I'm currently developing my own rendering engine with OpenGL and C++. It's using deferred shading and some of the most common post processing effects like Bloom, HDR and SSAO. The engine's public repository is available now on <a href="https://github.com/fatsopanda/opengl_demo_public">github</a><br />
+            I'm currently developing my own rendering engine with OpenGL and C++. It's using deferred shading and some of the most common post processing effects like Bloom, HDR and SSAO. The engine is under development on <a href="https://github.com/fatsopanda/rendering_engine">GitHub</a><br />
             <a href="images/demo_1024.png"><img src="images/demo_640.png"></a><br /><br />
 
             <p><b>Plasma Lamp's Dance of Freedom</b><br />
             My very first 4k intro done for Assembly 17, placed as 12th. Final file size was 3910 bytes. I ran out of time in the end and managed to make a quick track on the last night before submitting the entry. You can watch the entry  <a href="https://www.youtube.com/watch?v=k8g2xCfqZgY">here</a><br />
             <img src="images/plasmalamp.png"><br /><br />
 
-            <b>Pixel Shaders</b><br />Some pixel shaders and raymarchers I've written.<br />Find these also on <a href="https://github.com/fatsopanda/shader_sketcher">GitHub</a><br /><img src="images/cubemarch.png" /><br />
-            I really, really, like plasma<br />
-            <img src="images/plasma1.png"><img src="images/plasma2.png"><img src="images/plasma3.png"><br /><br />
+            <b>Shader Sketcher</b><br />An offline shader sketching tool featuring shader reloading and time. Still under development on <br /><a href="https://github.com/fatsopanda/shader_sketcher">GitHub</a><br /><a href="images/sketcher_full.png"><img src="images/sketcher_640.png" /></a><br />
 
             <h5>Games</h5>
             <a href="https://zhamul.itch.io/sweet-end">Sweet End<a><br /><a href="https://zhamul.itch.io/sweet-end"><img src="images/sweet_end.png" /></a><br />
