--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <p><b>Raytracer</b><br />
             Currently under development at: <a href="https://github.com/fatsopanda/raytracer">GitHub</a><br />
             Uses KDTree as an acceleration data structure. Loads OBJ files.
-            <img src="images/raytacer.png"><br /><br />
+            <img src="images/raytracer.png"><br /><br />
             <p><b>Rendering engine</b><br />
             I'm currently developing my own rendering engine with OpenGL and C++. It's using deferred shading and some of the most common post processing effects like Bloom, HDR and SSAO. The engine is under development on <a href="https://github.com/fatsopanda/rendering_engine">GitHub</a><br />
             <a href="images/demo_1024.png"><img src="images/demo_640.png"></a><br /><br />
