--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <div class="nine columns">
             <h5>Graphics programming</h5>
             <p><b>Raytracer</b><br />
-            Currently under development at: <a href="https://github.com/fatsopanda/raytracer">GitHub</a><br />
+            Currently under development on: <a href="https://github.com/fatsopanda/raytracer">GitHub</a><br />
             Uses KDTree as an acceleration data structure. Loads OBJ files.
             <img src="images/raytracer.png"><br /><br />
             <p><b>Rendering engine</b><br />
@@ -55,11 +55,12 @@
             My very first 4k intro done for Assembly 17, placed as 12th. Final file size was 3910 bytes. I ran out of time in the end and managed to make a quick track on the last night before submitting the entry. You can watch the entry  <a href="https://www.youtube.com/watch?v=k8g2xCfqZgY">here</a><br />
             <img src="images/plasmalamp.png"><br /><br />
 
-            <b>Shader Sketcher</b><br />An offline shader sketching tool featuring shader reloading and time. Still under development on <br /><a href="https://github.com/fatsopanda/shader_sketcher">GitHub</a><br /><a href="images/sketcher_full.png"><img src="images/sketcher_640.png" /></a><br />
+            <b>Shader Sketcher</b><br />An offline shader sketching tool featuring shader reloading and time. Under development on <br /><a href="https://github.com/fatsopanda/shader_sketcher">GitHub</a><br /><a href="images/sketcher_full.png"><img src="images/sketcher_640.png" /></a><br />
 
             <h5>Games</h5>
+            Most of the game projects have been created at game jams usually in teams of 2-5 people.<br /><br />
             <a href="https://zhamul.itch.io/sweet-end">Sweet End<a><br /><a href="https://zhamul.itch.io/sweet-end"><img src="images/sweet_end.png" /></a><br />
-              
+
             <a href="http://globalgamejam.org/2017/games/crowd-surf-brawl">Crowd Surf Brawl</a><br /><a href="http://globalgamejam.org/2017/games/crowd-surf-brawl"><img src="images/crowdsurf.png" /></a><br />
 
             <a href="https://fatsopanda.itch.io/tap-good">Tap Good</a><br /><a href="https://fatsopanda.itch.io/tap-good"><img src="images/tapgood.gif" /></a><br />
