--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <h5>Graphics programming</h5>
             <p><b>Raytracer</b><br />
             Currently under development on: <a href="https://github.com/fatsopanda/raytracer">GitHub</a><br />
-            Uses KDTree as an acceleration data structure. Loads OBJ files.
+            Uses a Bounding Volume Hierarchy as an acceleration data structure. Loads OBJ files.
             <img src="images/raytracer.png"><br /><br />
             <p><b>Rendering engine</b><br />
             I'm currently developing my own rendering engine with OpenGL and C++. It's using deferred shading and some of the most common post processing effects like Bloom, HDR and SSAO. The engine is under development on <a href="https://github.com/fatsopanda/rendering_engine">GitHub</a><br />
