--- a/index.html
+++ b/index.html
@@ -43,19 +43,22 @@
     <div class="row" style="margin-top: 5%">
         <div class="nine columns">
             <h5>Graphics programming</h5>
+            <p><b>Trippin' Through</b><br />
+            My 2nd 4k intro made for Assembly 2018 (placed 12th). Final executable size was 3876 bytes. You can watch the entry at <a href="https://www.youtube.com/watch?v=f8Q99RCSQ3U">here</a><br />
+            <img src="images/tripping.png"><br /><br />
+
             <p><b>Raytracer</b><br />
             Currently under development on: <a href="https://github.com/fatsopanda/raytracer">GitHub</a><br />
             Uses a Bounding Volume Hierarchy as an acceleration data structure. Loads OBJ files.
             <img src="images/raytracer.png"><br /><br />
+
             <p><b>Rendering engine</b><br />
             I'm currently developing my own rendering engine with OpenGL and C++. It's using deferred shading and some of the most common post processing effects like Bloom, HDR and SSAO. The engine is under development on <a href="https://github.com/fatsopanda/rendering_engine">GitHub</a><br />
             <a href="images/demo_1024.png"><img src="images/demo_640.png"></a><br /><br />
 
             <p><b>Plasma Lamp's Dance of Freedom</b><br />
-            My very first 4k intro done for Assembly 17, placed as 12th. Final file size was 3910 bytes. I ran out of time in the end and managed to make a quick track on the last night before submitting the entry. You can watch the entry  <a href="https://www.youtube.com/watch?v=k8g2xCfqZgY">here</a><br />
+            My very first 4k intro done for Assembly 17, placed as 12th. Final file size was 3910 bytes. I ran out of time in the end and managed to make a quick track on the last night before submitting the entry. You can watch the entry at <a href="https://www.youtube.com/watch?v=k8g2xCfqZgY">here</a><br />
             <img src="images/plasmalamp.png"><br /><br />
-
-            <b>Shader Sketcher</b><br />An offline shader sketching tool featuring shader reloading and time. Under development on <br /><a href="https://github.com/fatsopanda/shader_sketcher">GitHub</a><br /><a href="images/sketcher_full.png"><img src="images/sketcher_640.png" /></a><br />
 
             <h5>Games</h5>
             Most of the game projects have been created at game jams usually in teams of 2-5 people.<br /><br />
