--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <div class="nine columns">
             <h5>Graphics programming</h5>
             <p><b>Trippin' Through</b><br />
-            My 2nd 4k intro made for Assembly 2018 (placed 12th). Final executable size was 3876 bytes. You can watch the entry at <a href="https://www.youtube.com/watch?v=f8Q99RCSQ3U">here</a><br />
+            My second 4k intro, made for Assembly 2018, and placed as 12th. Final executable size was 3876 bytes. You can watch the entry at <a href="https://www.youtube.com/watch?v=f8Q99RCSQ3U">here</a><br />
             <img src="images/tripping.png"><br /><br />
 
             <p><b>Raytracer</b><br />
@@ -57,7 +57,7 @@
             <a href="images/demo_1024.png"><img src="images/demo_640.png"></a><br /><br />
 
             <p><b>Plasma Lamp's Dance of Freedom</b><br />
-            My very first 4k intro done for Assembly 17, placed as 12th. Final file size was 3910 bytes. I ran out of time in the end and managed to make a quick track on the last night before submitting the entry. You can watch the entry at <a href="https://www.youtube.com/watch?v=k8g2xCfqZgY">here</a><br />
+            My very first 4k intro, done for Assembly 17, and placed as 12th. Final file size was 3910 bytes. I ran out of time in the end and managed to make a quick track on the last night before submitting the entry. You can watch the entry at <a href="https://www.youtube.com/watch?v=k8g2xCfqZgY">here</a><br />
             <img src="images/plasmalamp.png"><br /><br />
 
             <h5>Games</h5>
