--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>flux is writing code sometimes</title>
+  <title>I type code and things online</title>
   <meta name="description" content="">
   <meta name="author" content="">
 
@@ -35,8 +35,8 @@
   <div class="container">
       <div class="row" style="margin-top: 5%">
         <div class="nine columns">
-            <p>Hi there! I code graphics, games and other interactive software.<br />
-            Some projects are also available on my <a href="https://github.com/fluxwritescode">GitHub</a>
+            <p>Hi There! This is my old portfolio of graphics programming and game development projects. I don't touch this stuff anymore, but left it here for people to see.<br />
+            Some projects are also available on my <a href="https://github.com/sumikkowritescode">GitHub</a>
         </div>
     </div>
     <div class="row" style="margin-top: 5%">
@@ -74,6 +74,8 @@
             <a href="https://fatsopanda.itch.io/cupcake-boating">Cupcake boating</a><br /><a href="https://fatsopanda.itch.io/cupcake-boating"><img src="images/cupcakes.gif" /></a><br /><br />
 
             <a href="https://fatsopanda.itch.io/morning-coffee-poop">Morning Coffee</a><br /><a href="https://fatsopanda.itch.io/morning-coffee-poop"><img src="images/ggj.gif" /></a><br /><br />
+
+            <a rel="me" href="https://infosec.exchange/@sumikko">Mastodon</a>
         </div>
     </div>
   </div>
