--- a/index.html
+++ b/index.html
@@ -35,8 +35,9 @@
   <div class="container">
       <div class="row" style="margin-top: 5%">
         <div class="nine columns">
-            <p>Hi There! This is my old portfolio of graphics programming and game development projects. I don't touch this stuff anymore, but left it here for people to see.<br />
-            Some projects are also available on my <a href="https://github.com/sumikkowritescode">GitHub</a>
+            <p>Hi There! This is my old portfolio of graphics programming and game development projects.<br />
+               I don't touch this stuff anymore, but will be using this site on my cybersecurity journey, so you can expect some updates here in the future.<br />
+            Some of the old projects are on my <a href="https://github.com/sumikkowritescode">GitHub</a>
         </div>
     </div>
     <div class="row" style="margin-top: 5%">
